fix Edmind's logo alignment

--- a/front-end/src/Styles/Signup.css
+++ b/front-end/src/Styles/Signup.css
@@ -67,6 +67,7 @@
     max-width: 100%;
     max-height: 100%;
     height: 200px;
+    display: inline;
 }
 
 .login-button {
